@@ -1,4 +1,4 @@
 declare f as function (x) returning pointer to int
                        ^
-24: warning: missing type specifier
-int* f(x);
+24: warning: missing type specifier; int assumed
+int* f(int x);
