@@ -1,0 +1,1 @@
+declare f as function (x as int) returning int
