@@ -1,4 +1,4 @@
 explain int* f(x)
                ^
-16: warning: missing type specifier
-declare f as function (x) returning pointer to int
+16: warning: missing type specifier; int assumed
+declare f as function (x as int) returning pointer to int
