@@ -1,1 +1,1 @@
-cdecl @ @ -xc18 @ declare f as function (x) returning pointer to int @ 0
+cdecl @ @ -xc17 @ declare f as function (x) returning pointer to int @ 0
