@@ -1,0 +1,1 @@
+cdecl @ @ -xcknr @ declare f as function (x) returning pointer to int @ 0
